Convert result models to classes so build.xml reloads after restart
SentinelBuildAction (a RunAction2) persists a SentinelResult into each
build's build.xml via Jenkins' XStream2. The model types were Java records,
and XStream2 can write a record but cannot read it back (fromXML fails with
"can't get field offset on a record class" — record reconstruction needs the
canonical constructor, while XStream deserializes plain classes by field
reflection). So after a controller restart, reloading a build dropped its
mutation report, and the project trend chart skipped those builds.

- Convert MutationEntry, FileMutationResult, and SentinelResult from records
  to plain final classes, keeping the exact record-style accessor names
  (sourceFile(), overallScore(), ...) so every caller, Jelly template, and
  test is unchanged. Keep MutationEntry.skippedEntry() and SentinelResult's
  defensive-copy constructor (now via List.copyOf). MutationScore was already
  a plain class and is untouched.
- Add SentinelResultTest.roundTripsThroughXStreamForBuildXmlPersistence, which
  serializes and deserializes through the real hudson.util.XStream2 and would
  have caught the defect.
- Exclude PMD AvoidFieldNameMatchingMethodName: the record-style field==accessor
  naming in these value classes is intentional.

equals/hashCode/toString are intentionally omitted (no caller compares or
collects these objects). A full end-to-end test (SentinelBuildAction in a real
build.xml across a controller restart) still needs jenkins-test-harness.